fix card1 gradient, do not lazy load first card and make it visible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,7 +154,7 @@ body {
     color: #ffffff8f;
 }
 .card-01.height-fix {
-     height: 350px;
+    height: 350px;
     overflow: hidden;
     width: 260px;
 }
@@ -168,7 +168,6 @@ body {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    /*background-color: #fff;*/
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
@@ -183,7 +182,9 @@ body {
 .card-01.height-fix .card-img-overlay {
     top: unset;
     color: #fff;
-    background: linear-gradient(to bottom, rgba(26,96,111,0) 0%,rgba(26,96,111,0) 1%,rgba(0, 0, 0, 0.31) 31%,rgb(37, 37, 37) 100%);
+    background-color: rgba(0, 0, 0, 0.58);
+    /*background: linear-gradient(to bottom, rgba(26, 96, 111, 0) 0%,rgba(0, 0, 0, 0) 1%,rgba(0, 0, 0, 0.7) 31%,rgb(37, 37, 37) 100%);*/
+    /*background: linear-gradient(to bottom, rgba(26,96,111,0) 0%,rgba(26,96,111,0) 1%,rgba(0, 0, 0, 0.31) 31%,rgb(37, 37, 37) 100%);*/
 }
 
 .card-img-overlay {
